--- a/tt.html
+++ b/tt.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="submit" name="" id="">
+    <input type="password" name="" id="">
 </body>
 </html>
+
+
+<table border="1" cellspacing="0" cellpadding="5">
+    <tr>
+        <td>Name</td>
+        <td>Grade</td>
+        <td>Pass & fail</td>
+    </tr>
+    
+    <tr>
+        <th></th>
+        <th></th>
+        <th></th>
+    </tr>
+</table>
